config-root/namespaces/jx-staging/twitter-ui/twitter-ui-twitter-ui-deploy.yaml
# Source: twitter-ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitter-ui-twitter-ui
  labels:
    draft: draft-app
    chart: "twitter-ui-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'twitter-ui'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: twitter-ui-twitter-ui
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: twitter-ui-twitter-ui
    spec:
      serviceAccountName: twitter-ui-twitter-ui
      containers:
        - name: twitter-ui
          image: "gcr.io/compute-project-183119/twitter-ui:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
